Colaboratory を使用して作成しました

--- a/seccon4b2021.ipynb
+++ b/seccon4b2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1d2TedxO5WHLxBIokQhrrpDz6jg1Hr0ZI",
-      "authorship_tag": "ABX9TyPWcgVNFutBd1/6uktoDvP1",
+      "authorship_tag": "ABX9TyPV3BBvlBTaxEaupHL+MEob",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -45,6 +45,15 @@
       },
       "source": [
         "##simple RSA"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6A40VOiZ3KB_"
+      },
+      "source": [
+        "大きな数の三乗根の計算が必要"
       ]
     },
     {
@@ -189,6 +198,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZbQp2eul3h8P"
+      },
+      "source": [
+        "素数*p*、*q*の値が近いという脆弱性がある。\n",
+        "\n",
+        "$q=x+i$\n",
+        "\n",
+        "$p=x-i$\n",
+        "\n",
+        "とすると\n",
+        "\n",
+        "$n=p\\times q=\\left(x-i\\right)\\times\\left(x+i\\right)=x^{2}-i^{2}$\n",
+        "\n",
+        "と書けるので\n",
+        "\n",
+        "$n+i^{2}$\n",
+        "\n",
+        "が整数の平方根となるような整数*i*を探す問題（*p*と*q*が近いと*i*が簡単に見つかる）\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "XfsedEOvS6OA"
@@ -250,8 +283,8 @@
         "outputId": "c735914d-ad85-4c6f-addf-b024098b37e8"
       },
       "source": [
-        "p = x + i\n",
-        "q = x - i\n",
+        "q = x + i\n",
+        "p = x - i\n",
         "\n",
         "n - p*q"
       ],
@@ -269,6 +302,15 @@
           },
           "execution_count": 9
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hG9XAysM8t4s"
+      },
+      "source": [
+        "*p*と*q*がもとまったので、秘密鍵*d*が計算できる"
       ]
     },
     {
@@ -320,7 +362,8 @@
         "\n",
         "d = inverse(e, (p-1)*(q-1))\n",
         "\n",
-        "print(d)\n"
+        "print(d)\n",
+        "k"
       ],
       "execution_count": null,
       "outputs": [
@@ -339,11 +382,17 @@
         "id": "omh6Pz_Ko44P"
       },
       "source": [
-        "####eと（p-1）*（q-1）が互いに素でなければ秘密鍵dが計算できないので通常は復号不可能。<br>ただし、次の条件を満たす場合は平文の候補をe個以下に絞ることができる。\n",
+        "？？\n",
         "\n",
-        "1.   eが素数\n",
-        "2.   p-1がeで１回だけ割り切れる\n",
-        "3.   q-1はeで割り切れない\n"
+        "*e*と$（p-1）\\times （q-1）$が「互いに素」になっていない\n",
+        "\n",
+        "よって、モジュラ逆数が計算できないため秘密鍵*d*が計算できない\n",
+        "\n",
+        "<a href=\"https://y011d4.netlify.app/20201026-not-coprime-e-phi/\">ここ</a>によると、次の条件を満たす場合は平文の候補を*e*個以下に絞ることができるらしい\n",
+        "\n",
+        "1.   *e*が素数\n",
+        "2.   $p-1$が*e*で１回だけ割り切れる\n",
+        "3.   $q-1$は*e*で割り切れない\n"
       ]
     },
     {
@@ -381,14 +430,22 @@
         "id": "NpfRQjxXrAUO"
       },
       "source": [
-        "####平文mは次のうちのいずれか\n",
-        "m = pow(c, d) * pow(L, i) % n <br>\n",
+        "平文*m*は次のうちのいずれか\n",
         "\n",
-        "*   d = inverse(e, lmd//e)\n",
-        "*   L = pow(x, lmd//e)\n",
-        "*   lmd = lcm(p-1, q-1)\n",
-        "*   xは任意の整数\n",
-        "*   0 < i <= e"
+        ">$m = c^{d} \\times L^{i} \\bmod \\left( n \\right) $\n",
+        "\n",
+        "ただし　$0 < i \\leq e$\n",
+        "\n",
+        ">$d = e^{-1} \\bmod \\left( \\lambda /e \\right)$\n",
+        "\n",
+        ">$L = x^{\\lambda /e}$\n",
+        "\n",
+        ">$\\begin{split}\n",
+        "   \\lambda &= lcm\\left( p-1, q-1 \\right) \\\\\n",
+        "   &= \\left( p-1 \\right) \\times  \\left( q-1 \\right) / gcd \\left( p-1, q-1 \\right)\n",
+        " \\end{split}$\n",
+        "\n",
+        "ただし、*x*は任意の整数（今回は「２」）"
       ]
     },
     {
@@ -456,15 +513,17 @@
         "id": "0Wxy1h1_KgdR"
       },
       "source": [
-        "pycryptoだと通らない。pycryptodomeがいるらしい。"
+        "ソースを読むと、隠しコマンド「５」を指定するとflagが表示される。\n",
+        "ただし、*save*データに「*1337i*」が必要。\n",
+        "\n",
+        "ところで、暗号モジュールがpycryptoだと「app.py」が通らないことが判明。どうやら「pycryptodome」がいるらしい。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Bp1hwV-fI_SV",
         "outputId": "33e661d2-9608-4435-bc64-d23ff56e8008"
@@ -472,7 +531,7 @@
       "source": [
         "!pip install pycryptodome"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -515,7 +574,7 @@
         "from Crypto.Util.Padding import pad, unpad\n",
         "# from secret import flag, key"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -524,8 +583,9 @@
         "id": "sEn2StQ3MqY-"
       },
       "source": [
-        "AES暗号をかける直前の平文<br>\n",
-        "dict型のデータをjson.dumps()している"
+        "暗号をかける直前の平文を調べてみる。\n",
+        "\n",
+        "dict型のデータをjson.dumps()していることがわかる。"
       ]
     },
     {
@@ -548,7 +608,7 @@
         "\n",
         "print(dump)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,7 +645,7 @@
         "enc = cipher.encrypt(dump)\n",
         "print(enc.hex().encode() + b'\\n')\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -602,8 +662,9 @@
         "id": "YCLJwR7dO6jO"
       },
       "source": [
-        "次は復号処理<br>\n",
-        "鍵は暗号化の時と同じにする"
+        "次は復号\n",
+        "\n",
+        "もちろん、鍵は暗号化の時と同じ"
       ]
     },
     {
@@ -626,7 +687,7 @@
         "\n",
         "print(plaintext)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +704,7 @@
         "id": "n6Xq_dreTcP4"
       },
       "source": [
-        "暗号文を２個繋げて復号してみる"
+        "例えば、暗号文を２個繋げて復号してみると・・・"
       ]
     },
     {
@@ -666,7 +727,7 @@
         "\n",
         "print(plaintext)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,7 +744,13 @@
         "id": "_BxZGTqLNC71"
       },
       "source": [
-        "AES.block_sizeは16バイトだから、16バイト単位で継ぎ接ぎができる"
+        "AES.block_sizeは16バイトだから、16バイト単位で継ぎ接ぎができる。\n",
+        "\n",
+        "これはECBモードの脆弱性。\n",
+        "\n",
+        "普通、ECBモードが使われることはないと思う。\n",
+        "\n",
+        "じゃあ何モードを使えば安全か？という疑問が湧くが、それは<a href=\"https://ja.wikipedia.org/wiki/%E6%9A%97%E5%8F%B7%E5%88%A9%E7%94%A8%E3%83%A2%E3%83%BC%E3%83%89\">この辺</a>を参照。"
       ]
     },
     {
@@ -698,7 +765,7 @@
       "source": [
         "AES.block_size"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -720,7 +787,9 @@
         "id": "FwOP2-5w02YA"
       },
       "source": [
-        "こんなデータを作って・・・"
+        "あとはいい感じでデータを作って切り貼りする。\n",
+        "\n",
+        "例えば、こんなデータを作って・・・"
       ]
     },
     {
@@ -738,7 +807,7 @@
         "for i in range(0, len(text), 16):\n",
         "  print(text[i: i+16])\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -783,7 +852,7 @@
         "\n",
         "print(ans)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -815,7 +884,7 @@
       "source": [
         "!apt install netcat"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -861,7 +930,7 @@
       "source": [
         "!nc imaginary.quals.beginners.seccon.jp 1337"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -924,7 +993,7 @@
         "\n",
         "print(ans)\n"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -947,7 +1016,7 @@
       "source": [
         "!nc imaginary.quals.beginners.seccon.jp 1337"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1023,7 +1092,7 @@
       "source": [
         "!objdump -d -M intel /content/drive/MyDrive/seccon4b2021/only_read/chall | sed '/<main>:/,/^$/!d'"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1168,7 +1237,7 @@
       "source": [
         "!objdump -d -M intel /content/drive/MyDrive/seccon4b2021/only_read/chall | sed '/<main>:/,/^$/!d' | grep cmp"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1214,8 +1283,7 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "T1DrSLz5A2Y8",
         "outputId": "706821a9-15fb-4514-8f04-17b900f07173"
@@ -1229,7 +1297,7 @@
         "\n",
         "bytearray(idata).decode()\n"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1494,7 +1562,7 @@
       "source": [
         "!curl https://osoba.quals.beginners.seccon.jp/?page=public/../../flag"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1604,10 +1672,9 @@
         "id": "zzN2uK13FOov"
       },
       "source": [
-        "\"127.0.0.1\"を指定できればflagゲット<br>\n",
-        "ただし、「.（コロン）」は全ておばけに置換される\n",
+        "GETパラメタに\"127.0.0.1\"が指定できればflagゲット。ただし、「.（コロン）」は全ておばけに置換される。\n",
         "\n",
-        "IPアドレスを16進で表現することができるらしい（ブラウザ依存）"
+        "<a href=\"https://qiita.com/naka_kyon/items/88478be20b300e757fc0\">ここ</a>によると、URIでIPアドレスを指定する時に様々な表記方法が可能らしい。（ブラウザ依存）"
       ]
     },
     {
@@ -1729,9 +1796,9 @@
         "id": "OI6oi8qQG81A"
       },
       "source": [
-        "アクセス元アドレスの詐称\n",
+        "アクセス元アドレスを詐称できればいい。\n",
         "\n",
-        "「X-Forwarded-For:」ヘッダーを使う"
+        "「X-Forwarded-For:」ヘッダーを使うらしい。<a href=\"https://www.m3tech.blog/entry/x-forwarded-for\">この辺</a>が参考になる。\n"
       ]
     },
     {
@@ -1909,10 +1976,21 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "nimNK-ShLjCn"
+      },
+      "source": [
+        "本番中はwkwkさんが解いちゃったのでノータッチ。\n",
+        "\n",
+        "終わってからちょっと考えて、モザイクが取れそうな気がしたのでチャレンジしてみた。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "iW7Ac-Ndtc7f"
       },
       "source": [
-        "###描画パート"
+        "描画パート"
       ]
     },
     {
@@ -1963,7 +2041,7 @@
         "id": "NGYxPXJguBAT"
       },
       "source": [
-        "###全ての文字（asciiコード：33〜126）を書く"
+        "全ての文字（asciiコード：33〜126）を書く"
       ]
     },
     {
@@ -2057,7 +2135,7 @@
         "id": "zM-4zmbuy_H6"
       },
       "source": [
-        "###入力がない画像（mask）との差分を取る"
+        "入力がない画像（mask）との差分を取る"
       ]
     },
     {
@@ -2156,10 +2234,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "e2Z82bVsL19J"
+      },
+      "source": [
+        "うーん、文字によってはいけなくもない感じ・・・"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "LqrTQUjgwbmK"
       },
       "source": [
-        "###mask用画像の作成（31個分）"
+        "mask用画像の作成（31個分）"
       ]
     },
     {
@@ -2238,7 +2325,7 @@
         "id": "O18XG6Iqx3Xp"
       },
       "source": [
-        "###flagとmask画像の差分を取る"
+        "flagとmask画像の差分を取る"
       ]
     },
     {
@@ -2300,10 +2387,19 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "80EtRut1LIeJ"
+      },
+      "source": [
+        "頑張れば読めそう。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "B1q-Q0Ai3ISw"
       },
       "source": [
-        "###wkwkコード"
+        "wkwkさんのコード。やっぱエレガント。\n"
       ]
     },
     {
@@ -2312,7 +2408,7 @@
         "id": "04VpG1KJ3YFu"
       },
       "source": [
-        "####flagを分離"
+        "flagを分離（この辺がエレガント）"
       ]
     },
     {
@@ -2374,7 +2470,7 @@
         "id": "GDeQT1Fh31fU"
       },
       "source": [
-        "####ａｓｃｉｉコードと比較する"
+        "asciiコードと比較する"
       ]
     },
     {
@@ -2435,7 +2531,10 @@
         "id": "T3GQs-OYAsiI"
       },
       "source": [
-        "####？？？"
+        "？？？\n",
+        "なぜか*d*が復号されない・・・\n",
+        "\n",
+        "discordのソースを貼り付けてもやっぱできないので、環境依存かな。"
       ]
     },
     {
