Colaboratory を使用して作成しました

--- a/seccon4b2021.ipynb
+++ b/seccon4b2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1d2TedxO5WHLxBIokQhrrpDz6jg1Hr0ZI",
-      "authorship_tag": "ABX9TyMKIWQ7DaBRUlbC7YLixYfd",
+      "authorship_tag": "ABX9TyM2lQgN9AhldumxENPk1zLZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -205,17 +205,17 @@
       "source": [
         "素数*p*、*q*の値が近いという脆弱性がある。\n",
         "\n",
-        "$q=x+i$\n",
+        ">$q=x+i$\n",
         "\n",
-        "$p=x-i$\n",
+        ">$p=x-i$\n",
         "\n",
         "とすると\n",
         "\n",
-        "$n=p\\times q=\\left(x-i\\right)\\times\\left(x+i\\right)=x^{2}-i^{2}$\n",
+        ">$n=p\\times q=\\left(x-i\\right)\\times\\left(x+i\\right)=x^{2}-i^{2}$\n",
         "\n",
         "と書けるので\n",
         "\n",
-        "$n+i^{2}$\n",
+        ">$n+i^{2}$\n",
         "\n",
         "が整数の平方根となるような整数*i*を探す問題（*p*と*q*が近いと*i*が簡単に見つかる）\n",
         "\n"
@@ -441,9 +441,9 @@
         ">$L = x^{\\lambda /e}$\n",
         "\n",
         ">$\\begin{split}\n",
-        "   \\lambda &= lcm\\left( p-1, q-1 \\right) \\\\\n",
-        "   &= \\left( p-1 \\right) \\times  \\left( q-1 \\right) / gcd \\left( p-1, q-1 \\right)\n",
-        " \\end{split}$\n",
+        "\\lambda &= lcm\\left( p-1, q-1 \\right) \\\\\n",
+        "&= \\left( p-1 \\right) \\times  \\left( q-1 \\right) / gcd \\left( p-1, q-1 \\right)\n",
+        "\\end{split}$\n",
         "\n",
         "ただし、*x*は任意の整数（今回は「２」）"
       ]
