Colaboratory を使用して作成しました

--- a/seccon4b2021.ipynb
+++ b/seccon4b2021.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1d2TedxO5WHLxBIokQhrrpDz6jg1Hr0ZI",
-      "authorship_tag": "ABX9TyM2lQgN9AhldumxENPk1zLZ",
+      "authorship_tag": "ABX9TyPcDl0knIe7wztr1ctz+NBX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,15 @@
         "id": "6A40VOiZ3KB_"
       },
       "source": [
-        "大きな数の三乗根の計算が必要"
+        ">e = 3\n",
+        "\n",
+        ">assert 2046 < n.bit_length()\n",
+        "\n",
+        ">assert 375 == flag.bit_length()\n",
+        "\n",
+        "*e*が小さすぎて、暗号化の時に$ \\left( flag \\right)^{e}$が*n*を超えない。\n",
+        "\n",
+        "よって、暗号文の三乗根を計算すればOK。ただし、大きな数の三乗根の計算には工夫が必要。"
       ]
     },
     {
