Colaboratory を使用して作成しました

--- a/wanictf_2021_fall.ipynb
+++ b/wanictf_2021_fall.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1ZEzGXbAKxbYYjiylAYQTzeznXK4qZkd6",
-      "authorship_tag": "ABX9TyP7RCiWTPWWtpOWi/0pnVE9",
+      "authorship_tag": "ABX9TyNNmK23jkmCSfvnLZUWihvb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1647,6 +1647,145 @@
             "\n"
           ]
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LCpMZZewr2AR"
+      },
+      "source": [
+        "##docker_dive"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S1ctTuoysZMI"
+      },
+      "source": [
+        "!apt install file"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rau2RMtyr4jQ",
+        "outputId": "84c9085b-f719-46f5-bcef-bb0b0074c0cf"
+      },
+      "source": [
+        "!file /content/drive/MyDrive/wanictf_2021_fall/misc/docker_dive/mis-docker/solver"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/MyDrive/wanictf_2021_fall/misc/docker_dive/mis-docker/solver: ELF 64-bit LSB shared object, x86-64, version 1 (SYSV), dynamically linked, interpreter /lib64/ld-linux-x86-64.so.2, BuildID[sha1]=bcc91d289bc2ab32a131ab077081264f89f741b7, for GNU/Linux 3.2.0, stripped\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Y-Z4Ba3ZskRU",
+        "outputId": "bba9ea3e-3601-4f61-bcab-13eccb714575"
+      },
+      "source": [
+        "!cat /content/drive/MyDrive/wanictf_2021_fall/misc/docker_dive/mis-docker/Dockerfile"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "FROM alpine:3.14\n",
+            "WORKDIR /home/misc\n",
+            "ADD ./solver /home/misc/solver\n",
+            "RUN chmod 550 /home/misc/solver\n",
+            "RUN apk add libc6-compat\n",
+            "RUN ls /home/misc -lh\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j8phfLFHt2sA"
+      },
+      "source": [
+        "以下、ローカルでdockerコマンドを入力\n",
+        "\n",
+        "<pre>\n",
+        "$ docker build\n",
+        "\"docker build\" requires exactly 1 argument.\n",
+        "See 'docker build --help'.\n",
+        "\n",
+        "Usage:  docker build [OPTIONS] PATH | URL | -\n",
+        "\n",
+        "Build an image from a Dockerfile\n",
+        "(base) teruakinoMacBook-Air:mis-docker teruaki$ docker build .\n",
+        "[+] Building 10.5s (11/11) FINISHED\n",
+        " => [internal] load build definition from Dockerfile                                            0.1s\n",
+        " => => transferring dockerfile: 37B                                                             0.0s\n",
+        " => [internal] load .dockerignore                                                               0.0s\n",
+        " => => transferring context: 2B                                                                 0.0s\n",
+        " => [internal] load metadata for docker.io/library/alpine:3.14                                  3.8s\n",
+        " => [internal] load build context                                                               0.1s\n",
+        " => => transferring context: 28B                                                                0.0s\n",
+        " => [1/6] FROM docker.io/library/alpine:3.14@sha256:635f0aa53d99017b38d1a0aa5b2082f7812b03e3cd  2.5s\n",
+        " => => resolve docker.io/library/alpine:3.14@sha256:635f0aa53d99017b38d1a0aa5b2082f7812b03e3cd  0.0s\n",
+        " => => sha256:635f0aa53d99017b38d1a0aa5b2082f7812b03e3cdb299103fe77b5c8a07f1d2 1.64kB / 1.64kB  0.0s\n",
+        " => => sha256:5e604d3358ab7b6b734402ce2e19ddd822a354dc14843f34d36c603521dbb4f9 528B / 528B      0.0s\n",
+        " => => sha256:0a97eee8041e2b6c0e65abb2700b0705d0da5525ca69060b9e0bde8a3d17afdb 1.47kB / 1.47kB  0.0s\n",
+        " => => sha256:97518928ae5f3d52d4164b314a7e73654eb686ecd8aafa0b79acd980773a740d 2.82MB / 2.82MB  1.7s\n",
+        " => => extracting sha256:97518928ae5f3d52d4164b314a7e73654eb686ecd8aafa0b79acd980773a740d       0.6s\n",
+        " => [2/6] WORKDIR /home/misc                                                                    0.1s\n",
+        " => [3/6] ADD ./solver /home/misc/solver                                                        0.1s\n",
+        " => [4/6] RUN chmod 550 /home/misc/solver                                                       0.6s\n",
+        " => [5/6] RUN apk add libc6-compat                                                              1.8s\n",
+        " => [6/6] RUN ls /home/misc -lh                                                                 0.5s\n",
+        " => exporting to image                                                                          0.2s\n",
+        " => => exporting layers                                                                         0.2s\n",
+        " => => writing image sha256:59e659ba7adcfb6b58363a888b6cbab5290b1eb75421ab5b5febc942dde389cf    0.0s\n",
+        "\n",
+        "Use 'docker scan' to run Snyk tests against images to find vulnerabilities and learn how to fix them\n",
+        "</pre>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r8cOxj1zuQKi"
+      },
+      "source": [
+        "<pre>\n",
+        "$ docker images\n",
+        "REPOSITORY              TAG       IMAGE ID       CREATED          SIZE\n",
+        "<none>                  <none>    59e659ba7adc   44 seconds ago   7.81MB\n",
+        "\n",
+        "$ docker run -it 59e659ba7adc\n",
+        "/home/misc # ls\n",
+        "solver\n",
+        "/home/misc # ./solver\n",
+        "musl libc (x86_64)\n",
+        "Version 1.2.2\n",
+        "Dynamic Program Loader\n",
+        "Usage: /lib/ld-musl-x86_64.so.1 [options] [--] pathname\n",
+        "FLAG{y0u_Kn0W_H0w_to_Get_1nto_7he_DockeR}/home/misc #\n",
+        "</pre>"
       ]
     },
     {
