Colaboratory を使用して作成しました

--- a/wanictf_2021_fall.ipynb
+++ b/wanictf_2021_fall.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1ZEzGXbAKxbYYjiylAYQTzeznXK4qZkd6",
-      "authorship_tag": "ABX9TyNNmK23jkmCSfvnLZUWihvb",
+      "authorship_tag": "ABX9TyN5BXtauESbC5+FE1qYk4kU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -243,7 +243,7 @@
       "source": [
         "他にもいろんなやり方がある、例えばこんな感じ\n",
         "\n",
-        "でも、桁数によってうまくいかないことがあるのが難点"
+        "でも、桁数によってうまくいかないことがある・・・"
       ]
     },
     {
@@ -280,7 +280,7 @@
         "id": "kEB03Rri_YlQ"
       },
       "source": [
-        "これなら桁数によらずうまくいく"
+        "これなら桁数を気にしない"
       ]
     },
     {
@@ -308,6 +308,54 @@
           },
           "metadata": {},
           "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rcuStrn4_Y5A"
+      },
+      "source": [
+        "こんなのも発見"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "L-mNvJSK9_2i",
+        "outputId": "8cce8f99-7996-49a8-c9e1-55bff7558667"
+      },
+      "source": [
+        "x = 19116989514623535769166210117786818367158332986915210065591753844573169066323884981321863605962664727709419615399694310104576887228581060509732286555123028133634836954522269304382229987197\n",
+        "\n",
+        "d=0x100\n",
+        "b=[]\n",
+        "\n",
+        "while x > 0:\n",
+        "  b.append(chr(x%d))\n",
+        "  x //= d\n",
+        "\n",
+        "\"\".join(reversed(b))\n"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'FLAG{R1ng_d1n9_ding_d1ng_ding3ring3ding?__Wa_p@_pa_p@_pa_p@_pow?__or_konko-n?}'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
         }
       ]
     },
@@ -631,7 +679,50 @@
         "id": "9ulEZDKtAvIH"
       },
       "source": [
-        "残念ながらデフォルトでは使えない"
+        "残念ながらデフォルトでは使えない\n",
+        "\n",
+        "ところがどっこい、次のようにすればOKだったりする\n",
+        "\n",
+        "うまくいく理由を考えると少し賢くなれるかも・・・"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wyGQXDKGGGdz",
+        "outputId": "5696b56b-6580-43bd-e6c5-24f4e72a3da4"
+      },
+      "source": [
+        "p = 0x89a4e2c7f834f5fbc6f2a314e373e3723de7df6283c5d97cbca509c61e02965b7ef96efce1d827bfdfa7f21d22803558bb549f9ea15dfe9f47d3976648c55feb\n",
+        "x_P = 0x1e1cba0e07c61cf88e9f23b9859093c33c26cf83bcfb6fe24d7559cd0ea86fb2f144ae643ac5edf6f04ef065dc7c2c18d88ae02843592d5e611029fefc0fece\n",
+        "y_P = 0x198420b30a4330f82380326895d0ac06a1859bc49d45cd4b08021b857d23d515163b9151fbaf7ae5f816d485d129d3b1c4630d1fb45c6790af551428a5c85667\n",
+        "x_Q = 0x7e32edfd7befd8df93d7b738d6a1c95e1cfd56b3a6ccc4a62e4e0ae9059b4903e71fccbe07d8d45c762b4a3ed5c9d1a2505043d033e58adb72191259b81bc47d\n",
+        "y_Q = 0x46016c676585feaf048fff9d5cbb45dbd598c6c4c81694e0881bf110b57012f0bac6eaf7376fee015c8cecba1fc92206ca346f7d72ee1d60f820091c85fa76b3\n",
+        "\n",
+        "x = x_P - x_Q\n",
+        "y = y_P - y_Q\n",
+        "\n",
+        "x_inv = pow(x, p-2, p)\n",
+        "\n",
+        "x_R = pow(y * x_inv, 2, p) - x_P -x_Q\n",
+        "\n",
+        "(x_R).to_bytes((x_R.bit_length()+7)//8, 'big')"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "b'FLAG{7h1s_curv3_alw@ys_r3m1nd5_me_0f_pucca}'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
       ]
     },
     {
@@ -734,24 +825,27 @@
         "id": "pGx5RY-dB9c3"
       },
       "source": [
-        "ポイントは次の3つ\n",
+        "まず、平文長は49$byte$\n",
         "\n",
-        "1.   好きな平文を同じ鍵とivで暗号化できる\n",
-        "2.   暗号化に脆弱性がある\n",
-        "3.   平文が49$byte$\n",
+        ">AES.block_size=16\n",
         "\n",
+        "と合わせて考えると、最後のブロックは平文が１$byte$しか入っていない（残りはpadding）\n",
         "\n",
-        "まず1\n",
+        "平文の最後1$byte$は\n",
         "\n",
-        "オラクル\n",
+        "> }\n",
         "\n",
-        "とはいえ、１ブロックは$2^{128}bit$もあるので、総当たりで平文を探すのは流石に無理\n",
-        "\n",
-        "例えば、１ブロック目は「FLAG\\{」で始まることを知っているので、5$byte$分は既知だけど・・・\n",
-        "\n",
-        "それでも総当たりするには$2^{88}$くらいの計算が必要で・・・まぁ無理\n",
-        "\n",
-        "次に２\n",
+        "で確定だから、最後のブロックの平文は全て既知\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2JxvWd0pr2ZD"
+      },
+      "source": [
+        "*   ｎｃで問い合わせると好きな平文を暗号文と同じ鍵で暗号化できること\n",
+        "*   平文をAES暗号化した後、1個前の平文とXORしていること\n",
         "\n",
         "<pre>\n",
         "        P_prev = self.iv\n",
@@ -761,29 +855,9 @@
         "            P_prev = p\n",
         "</pre>\n",
         "\n",
-        "２ブロック目以降の平文を暗号化した後、１個前のブロックの平文とXORしてそのまま暗号文としている\n",
+        "から、後ろから２番目の平文も分かる\n",
         "\n",
-        "つまり、１ブロック分の平文をAESで暗号化した値を知ることができれば、1個前のブロックの平文が分かる\n",
-        "\n",
-        "これを繰り返せば、既知の平文より前の平文は全部分かることになる\n",
-        "\n",
-        "ちなみに、「AESで暗号化した値」はオラクルに聞けば教えてくれる\n",
-        "\n",
-        "最後に３\n",
-        "\n",
-        ">AES.block_size=16\n",
-        "\n",
-        "ということと合わせて考えると・・・\n",
-        "\n",
-        "最後のブロックは平文が１$byte$しか入っていない（残りはpadding）\n",
-        "\n",
-        "しかも、今回の平文は最後の1$byte$は\n",
-        "\n",
-        "> }\n",
-        "\n",
-        "で確定なので、最後のブロックの平文は全て既知\n",
-        "\n",
-        "以上このとから、この暗号文は解読可能\n"
+        "あとはこれを繰り返せば後ろから順に平文がわかるハズ\n"
       ]
     },
     {
