Colaboratory を使用して作成しました

--- a/wanictf_2021_fall.ipynb
+++ b/wanictf_2021_fall.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1ZEzGXbAKxbYYjiylAYQTzeznXK4qZkd6",
-      "authorship_tag": "ABX9TyN5BXtauESbC5+FE1qYk4kU",
+      "authorship_tag": "ABX9TyNsTdTDpLAZVYN39LDTCI0O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -829,9 +829,9 @@
         "\n",
         ">AES.block_size=16\n",
         "\n",
-        "と合わせて考えると、最後のブロックは平文が１$byte$しか入っていない（残りはpadding）\n",
+        "と合わせて考えると、最後のブロックは平文が１byteしか入っていない（残りはpadding）\n",
         "\n",
-        "平文の最後1$byte$は\n",
+        "平文の最後1byteは\n",
         "\n",
         "> }\n",
         "\n",
